[tool.poetry]
name = "elastic-apm-falcon"
version = "1.0.1"
description = "Middleware for tracking Falcon requests/responses with Elastic APM"
authors = ["Benedikt Brief <b.brief@snapaddy.com>"]
readme = "README.md"
packages = [{include = "elastic_apm_falcon"}]

[tool.poetry.dependencies]
python = "^3.9"
elastic-apm = "^6.0.0"
falcon = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.961"
isort = "^5.10.1"
pycln = "^2.0.1"
pre-commit = "^2.20.0"

[tool.black]
line-length = 99

[tool.isort]
include_trailing_comma = true
line_length = 99
multi_line_output = 3
use_parentheses = true

[tool.pycln]
all = true
exclude = "__init__.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
